17-fylo-data-storage-component-master/style.css
html {
  font-size: 62.5%;
}
.attribution {
  margin-top: 4rem;
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  font-size: 1.4rem;
  background-image: url(images/bg-desktop.png);
  background-repeat: no-repeat;
  background-position: bottom;
  background-color: hsl(229, 57%, 11%);
}

main {
  display: flex;
  flex-direction: row;
  align-items: end;
  font-family: Raleway;
  font-weight: 400;
  gap: 3rem;
}
section {
  background-color: hsl(228, 56%, 26%);
  border-radius: 1.2rem;
  padding: 3.4rem 4rem;
}

section:first-child {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  width: 27.5rem;
  border-top-right-radius: 10rem;
}

.files {
  margin-top: 4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 2rem;
}

.files img {
  width: 2.4rem;
  height: 2.4rem;
  padding: 1rem;
  border-radius: 1rem;
  object-fit: contain;
  background-color: hsl(229, 57%, 11%);
}

section:last-child {
  position: relative;
  width: 46rem;
  height: 8rem;
  color: hsl(243, 100%, 93%);
}

section:last-child > p {
  font-weight: 200;
}

.storage-left {
  background-color: white;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  top: -36%;
  right: 7%;
  font-size: 1rem;
  width: 15rem;
  padding: 1.4rem 1.8rem;
  text-transform: uppercase;
  font-size: 1.3rem;
  font-weight: 600;
  border-radius: 1.2rem;
  color: hsl(229, 7%, 55%);
}

.triangle {
  position: absolute;
  top: 9%;
  right: 7%;
  width: 0;
  height: 0;
  border-left: 3rem solid transparent;
  border-bottom: 3rem solid transparent;
  border-top: 3rem solid white;
}

.storage-left b {
  color: hsl(229, 57%, 11%);
  font-size: 4rem;
}

.progress-bar {
  width: 100%;
  height: 1.4rem;
  background-color: hsl(229, 57%, 11%);
  border-radius: 4rem;
  border: 0.4rem solid hsl(229, 57%, 11%);
}

.progress-bar-line {
  width: 72%;
  height: 100%;
  background-image: linear-gradient(
    to right,
    hsl(6, 100%, 80%),
    hsl(335, 100%, 65%)
  );
  border-radius: 4rem;
  display: flex;
  justify-content: end;
  align-items: center;
}

.circle {
  width: 1rem;
  margin-right: 0.2rem;
  height: 1rem;
  background-color: white;
  border-radius: 50%;
}

.progress-detail {
  display: flex;
  justify-content: space-between;
  font-weight: 600;
  font-size: 1.2rem;
}

@media only screen and (max-width: 800px) {
  body {
    background-image: url(images/bg-mobile.png);
    background-size: cover;
    background-repeat: no-repeat;
  }

  .triangle {
    display: none;
  }
  main {
    width: 375px;
    flex-direction: column;
  }

  section {
    text-align: center;
    justify-content: center;
    align-items: center;
    display: flex;
    flex-direction: column;
  }

  section:first-child,
  section:last-child {
    width: 24rem;
  }

  .progress-bar {
    width: 100%;
  }

  .progress-detail {
    width: 100%;
  }

  .storage-left {
    top: 80%;
    right: 20%;
  }

  .attribution {
    margin-top: 8rem;
  }
}

